--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -15,7 +15,8 @@
         "next": "12.1.6",
         "react": "18.1.0",
         "react-dom": "18.1.0",
-        "react-icons": "^4.4.0"
+        "react-icons": "^4.4.0",
+        "react-toastify": "^9.0.3"
     },
     "devDependencies": {
         "@types/node": "17.0.35",
